--- a/LockOnTarget.uplugin
+++ b/LockOnTarget.uplugin
@@ -2,30 +2,31 @@
 	"FileVersion": 1,
 	"Version": 1,
 	"VersionName": "1.0",
-	"FriendlyName": "LockOnTarget",
-	"Description": "",
-	"Category": "LockOnTarget",
-	"CreatedBy": "",
-	"CreatedByURL": "",
-	"DocsURL": "",
-	"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/d58106fca28446ec88caad16c5a35fe8",
-	"SupportURL": "",
 	"EngineVersion": "4.26.0",
+	"FriendlyName": "LockOnTarget",
+	"Description": "Lock On Target system",
+	"Category": "Game",
+	"CreatedBy": "Ivan Baktenkov J1blCblu",
+	"CreatedByURL": "https://github.com/J1blCblu",
+	"DocsURL": "https://github.com/J1blCblu/LockOnTarget/wiki",
+	"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/d58106fca28446ec88caad16c5a35fe8",
+	"SupportURL": "https://github.com/J1blCblu/LockOnTarget/issues",
 	"CanContainContent": true,
 	"IsBetaVersion": false,
 	"IsExperimentalVersion": false,
-	"Installed": false,
+	"Installed": true,
 	"Modules": [
 		{
 			"Name": "LockOnTarget",
 			"Type": "Runtime",
 			"LoadingPhase": "Default",
-			"WhitelistPlatforms": [ "Win64", "Win32", "Mac", "Linux" ]
+			"WhitelistPlatforms": [ "Win64", "Win32", "Linux" ]
 		},
 		{
 			"Name": "LockOnTargetEditor",
 			"Type": "Editor",
-			"LoadingPhase": "PostEngineInit"
+			"LoadingPhase": "PostEngineInit",
+			"WhitelistPlatforms": [ "Win64", "Win32", "Linux" ]
 		}
 	]
 }
