--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
 .gitattributes export-ignore
 .gitignore export-ignore
-license export-ignore
-readme.md export-ignore
+LICENSE export-ignore
+README.md export-ignore
