--- a/LockOnTarget.uplugin
+++ b/LockOnTarget.uplugin
@@ -1,11 +1,11 @@
 {
 	"FileVersion": 1,
 	"Version": 1,
-	"VersionName": "1.2.1",
+	"VersionName": "1.3.0",
 	"EngineVersion": "5.0.0",
 	"FriendlyName": "LockOnTarget",
 	"Description": "Lock On Target system",
-	"Category": "Game",
+	"Category": "Gameplay",
 	"CreatedBy": "Ivan Baktenkov J1blCblu",
 	"CreatedByURL": "https://github.com/J1blCblu",
 	"DocsURL": "https://github.com/J1blCblu/LockOnTarget/wiki",
@@ -19,7 +19,7 @@
 		{
 			"Name": "LockOnTarget",
 			"Type": "Runtime",
-			"LoadingPhase": "Default",
+			"LoadingPhase": "PreDefault",
 			"WhitelistPlatforms": [ "Win64", "Linux" ]
 		},
 		{
