--- a/LockOnTarget.uplugin
+++ b/LockOnTarget.uplugin
@@ -1,7 +1,7 @@
 {
 	"FileVersion": 1,
 	"Version": 1,
-	"VersionName": "1.4.0",
+	"VersionName": "1.4.2",
 	"EngineVersion": "5.0.0",
 	"FriendlyName": "LockOnTarget",
 	"Description": "Lock On Target system",
@@ -25,8 +25,7 @@
 		{
 			"Name": "LockOnTargetEditor",
 			"Type": "Editor",
-			"LoadingPhase": "PostEngineInit",
-			"WhitelistPlatforms": [ "Win64", "Linux" ]
+			"LoadingPhase": "PostEngineInit"
 		}
 	]
 }
