--- a/Config/BaseLockOnTarget.ini
+++ b/Config/BaseLockOnTarget.ini
@@ -4,21 +4,71 @@
 +PropertyRedirects=(OldName="LockOnTargetComponent.SwitchDelay",NewName="InputProcessingDelay")
 
 +FunctionRedirects=(OldName="LockOnTargetComponent.GetCapturedLocation",NewName="GetCapturedSocketLocation")
++FunctionRedirects=(OldName="LockOnTargetComponent.GetHelperComponent",NewName="GetTargetComponent")
++FunctionRedirects=(OldName="LockOnTargetComponent.GetTarget",NewName="GetTargetActor")
 
-;DefaultTargetHandler
+
+;TargetHandlerBase
++FunctionRedirects=(OldName="TargetHandlerBase.CanContinueTargeting",NewName="CheckTargetState")
+
+
+;ThirdPersonTargetHandler/DefaultTargetHandler
++ClassRedirects=(OldName="DefaultTargetHandler", NewName="ThirdPersonTargetHandler")
+
 +PropertyRedirects=(OldName="DefaultTargetHandler.TrigonometricInputWeight",NewName="PlayerInputWeight")
 +PropertyRedirects=(OldName="DefaultTargetHandler.CameraRotationOffsetForCalculations",NewName="ViewRotationOffset")
 +PropertyRedirects=(OldName="DefaultTargetHandler.TrigonometricAngleRange",NewName="AngleRange")
++PropertyRedirects=(OldName="DefaultTargetHandler.AngleWeightWhileFinding",NewName="AngleWeight")
++PropertyRedirects=(OldName="DefaultTargetHandler.FindingScreenOffset",NewName="ScreenOffset")
++PropertyRedirects=(OldName="DefaultTargetHandler.CaptureAngle",NewName="ViewAngle")
+
++EnumRedirects=(OldName="EUnlockReasonBitmask",NewName="EUnlockReason",ValueChanges=(("TargetInvalidation","Destruction"),("CapturedSocketInvalidation","SocketInvalidation"),("HelperComponentDiscard","StateInvalidation"),("OutOfLostDistance","DistanceFail")))
+
+
+;FTargetContext
++PropertyRedirects=(OldName="TargetContext.HelperComponent",NewName="Target")
++PropertyRedirects=(OldName="TargetContext.SocketName",NewName="Socket")
++PropertyRedirects=(OldName="TargetContext.SocketWorldLocation",NewName="Location")
+
+
+;FindTargetContext
++PropertyRedirects=(OldName="FindTargetContext.ContextOwner",NewName="TargetHandler")
++PropertyRedirects=(OldName="FindTargetContext.LockOnTargetComponent",NewName="Instigator")
++PropertyRedirects=(OldName="FindTargetContext.PlayerRawInput",NewName="PlayerInput")
++PropertyRedirects=(OldName="FindTargetContext.CurrentTarget",NewName="CapturedTarget")
+
+
+;FTargetInfo
++PropertyRedirects=(OldName="TargetInfo.HelperComponent",NewName="TargetComponent")
++PropertyRedirects=(OldName="TargetInfo.SocketForCapturing",NewName="Socket")
+
 
 ;RotationModes
 +PropertyRedirects=(OldName="LazyInterpolationMode.SmoothingAngleRange",NewName="SmoothingRange")
 
-;TargetingHelperComponent
+
+;RotationModules
++ClassRedirects=(OldName="OwnerRotationModule", NewName="ActorRotationModule")
++ClassRedirects=(OldName="ControlRotationModule", NewName="ControllerRotationModule")
+
+
+;TargetComponent/TargetingHelperComponent
++ClassRedirects=(OldName="TargetingHelperComponent", NewName="TargetComponent")
+
 +PropertyRedirects=(OldName="TargetingHelperComponent.bCanBeTargeted",NewName="bCanBeCaptured")
 +PropertyRedirects=(OldName="TargetingHelperComponent.WidgetClass",NewName="CustomWidgetClass")
 +PropertyRedirects=(OldName="TargetingHelperComponent.WidgetOffset",NewName="WidgetRelativeOffset")
+
++PropertyRedirects=(OldName="TargetComponent.MeshName",NewName="TrackedMeshName")
++PropertyRedirects=(OldName="TargetComponent.OnOwnerCaptured",NewName="OnCaptured")
++PropertyRedirects=(OldName="TargetComponent.OnOwnerReleased",NewName="OnReleased")
 
 +FunctionRedirects=(OldName="TargetingHelperComponent.CanBeTargeted",NewName="CanBeCaptured")
 +FunctionRedirects=(OldName="TargetingHelperComponent.IsTargeted",NewName="IsCaptured")
 +FunctionRedirects=(OldName="TargetingHelperComponent.UpdateMeshComponent",NewName="SetMeshComponent")
 +FunctionRedirects=(OldName="TargetingHelperComponent.SetMeshComponent",NewName="UpdateDesiredMesh")
+
++FunctionRedirects=(OldName="TargetComponent.GetDesiredMesh",NewName="GetTrackedMeshComponent")
++FunctionRedirects=(OldName="TargetComponent.UpdateDesiredMesh",NewName="SetTrackedMeshComponent")
+
++EnumRedirects=(OldName="EFocusPoint",ValueChanges=(("Default","CapturedSocket"))
